Слегка поправил описание в доке и в README.md
