# storage/api-docs/api-docs.json
@@ -15,40 +15,43 @@
         }
     ],
     "paths": {
-        "/api/v1/users/": {
+        "/api/v1/users": {
             "get": {
                 "tags": [
-                    "Show All Users"
+                    "Users"
                 ],
-                "summary": "Show List Of ALl Users",
-                "description": "Show List Of ALl Users",
-                "operationId": "users",
+                "summary": "Get list of users",
+                "operationId": "f957de7d77e7ec9013ca3c8f389f0b70",
                 "responses": {
                     "200": {
-                        "description": "Application/json"
-                    },
-                    "404": {
-                        "description": "User Not Found"
+                        "description": "Successful operation",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "array",
+                                    "items": {
+                                        "$ref": "#/components/schemas/UserResource"
+                                    }
+                                }
+                            }
+                        }
                     }
-                },
-                "deprecated": false
+                }
             }
         },
         "/api/v1/users/{id}/widget": {
             "get": {
                 "tags": [
-                    "Show Users Png Widget"
+                    "Widgets"
                 ],
-                "summary": "Generate Png Widget for User",
-                "description": "Generate Png Widget",
-                "operationId": "usersWidget",
+                "summary": "Get user's widget",
+                "operationId": "c8fc124cb964dc205f9e2344d167a89e",
                 "parameters": [
                     {
                         "name": "id",
                         "in": "path",
-                        "description": "User id",
+                        "description": "User ID",
                         "required": true,
-                        "explode": true,
                         "schema": {
                             "type": "string"
                         }
@@ -56,57 +59,84 @@
                     {
                         "name": "width",
                         "in": "query",
-                        "description": "width of the widget in px",
+                        "description": "Width of the widget",
                         "required": false,
-                        "explode": true,
                         "schema": {
                             "type": "integer",
-                            "default": 500
+                            "format": "int32",
+                            "maximum": 500,
+                            "minimum": 100
                         }
                     },
                     {
                         "name": "height",
                         "in": "query",
-                        "description": "height of the widget in px",
+                        "description": "Height of the widget",
                         "required": false,
-                        "explode": true,
                         "schema": {
                             "type": "integer",
-                            "default": 500
+                            "format": "int32",
+                            "maximum": 500,
+                            "minimum": 100
                         }
                     },
                     {
                         "name": "color",
                         "in": "query",
-                        "description": "color of the widget text in HEX",
+                        "description": "Color of the widget in hex format",
                         "required": false,
-                        "explode": true,
                         "schema": {
                             "type": "string",
-                            "default": "#fff"
+                            "pattern": "^#?([A-Fa-f0-9]{6}|[A-Fa-f0-9]{3})$"
                         }
                     },
                     {
                         "name": "bgcolor",
                         "in": "query",
-                        "description": "Background color of the widget text in HEX",
+                        "description": "Background color of the widget in hex format",
                         "required": false,
-                        "explode": true,
                         "schema": {
                             "type": "string",
-                            "default": "#000"
+                            "pattern": "^#?([A-Fa-f0-9]{6}|[A-Fa-f0-9]{3})$"
                         }
                     }
                 ],
                 "responses": {
                     "200": {
-                        "description": "image/png"
+                        "description": "Widget image",
+                        "content": {
+                            "image/png": {}
+                        }
+                    },
+                    "404": {
+                        "description": "User not found or not active"
                     },
                     "500": {
-                        "description": "Internal server error"
+                        "description": "Internal Server Error"
+                    }
+                }
+            }
+        }
+    },
+    "components": {
+        "schemas": {
+            "UserResource": {
+                "title": "User Resource",
+                "properties": {
+                    "id": {
+                        "type": "integer"
+                    },
+                    "name": {
+                        "type": "string"
+                    },
+                    "status": {
+                        "type": "string"
+                    },
+                    "avgRating": {
+                        "type": "integer"
                     }
                 },
-                "deprecated": false
+                "type": "object"
             }
         }
     }
